Adding in a few more endpoints
So validation passes

--- a/public/config.json
+++ b/public/config.json
@@ -14,19 +14,9 @@
     },
     "arguments": {
         "execute": {
-           "inArguments":[
-        {
-          "contactKey": "{{Contact.Key}}" 
-                }                 
-      ],
+          "inArguments":[],
           "outArguments": [],
           "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/execute",
-           "verb": "POST",
-            "body": "",
-            "header": "",
-            "format": "json",
-            "useJwt": true,
-            "timeout": 10000
         }
     },
     "configurationArguments": {
@@ -50,7 +40,12 @@
         "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
-      }
+      },
+      "unpublish": {
+        "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/unpublish",
+           "verb": "POST",
+        "useJwt": true
+       },
     },
     "wizardSteps": [{
         "label": "Promotion Type",
