--- a/public/config.json
+++ b/public/config.json
@@ -8,7 +8,7 @@
     "type": "REST",
     "lang": {
         "en-US": {
-          "name": "Associate Promotion",
+          "name": "SIT Associate Promotion",
           "description": "Associate an promotion with part of a journey"
         }
     },
@@ -20,7 +20,7 @@
                 }                 
       ],
           "outArguments": [],
-          "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/execute",
+          "url": "https://mc-jb-custom-activity-ca-sit.herokuapp.com/journeybuilder/execute",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -32,22 +32,22 @@
     "configurationArguments": {
       "applicationExtensionKey": "e45a41ef-3e23-4570-b03e-1eeed3971201",
       "save": {
-        "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/save",
+        "url": "https://mc-jb-custom-activity-ca-sit.herokuapp.com/journeybuilder/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/publish",
+        "url": "https://mc-jb-custom-activity-ca-sit.herokuapp.com/journeybuilder/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/stop",
+        "url": "https://mc-jb-custom-activity-ca-sit.herokuapp.com/journeybuilder/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://mc-jb-custom-activity-ca.herokuapp.com/journeybuilder/validate",
+        "url": "https://mc-jb-custom-activity-ca-sit.herokuapp.com/journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
       }
