--- a/public/config.json
+++ b/public/config.json
@@ -8,7 +8,7 @@
     "type": "REST",
     "lang": {
         "en-US": {
-          "name": "Associate Promotion",
+          "name": "SIT Associate Promotion",
           "description": "Associate an promotion with part of a journey"
         }
     },
